6. Criando uma API REST

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Letícia Patricio"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.1.3"
+djangorestframework = "^3.14.0"
 
 [tool.poetry.dev-dependencies]
 
