--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Letícia Patricio"]
 python = "^3.10"
 Django = "^4.1.3"
 djangorestframework = "^3.14.0"
+djangorestframework-simplejwt = "^5.2.2"
 
 [tool.poetry.dev-dependencies]
 
