--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.8.10"
 Django = "^4.1.3"
 djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.2"
+python-magic = "^0.4.27"
+Pillow = "^9.3.0"
 
 [tool.poetry.dev-dependencies]
 
