--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.2"
 python-magic = "^0.4.27"
 Pillow = "^9.3.0"
+drf-spectacular = "^0.24.2"
 
 [tool.poetry.dev-dependencies]
 
