--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
-asgiref==3.5.2; python_version >= "3.8"
-backports.zoneinfo==0.2.1; python_version < "3.9" and python_version >= "3.8"
-django==4.1.4; python_version >= "3.8"
-djangorestframework-simplejwt==5.2.2; python_version >= "3.7"
-djangorestframework==3.14.0; python_version >= "3.6"
-pillow==9.3.0; python_version >= "3.7"
-pyjwt==2.6.0; python_version >= "3.7"
-python-magic==0.4.27; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-pytz==2022.6; python_version >= "3.7"
-sqlparse==0.4.3; python_version >= "3.8"
-tzdata==2022.7; sys_platform == "win32" and python_version >= "3.8"
+asgiref==3.5.2 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+attrs==22.1.0 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+backports-zoneinfo==0.2.1 ; python_full_version >= "3.8.10" and python_version < "3.9"
+django==4.1.4 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+djangorestframework-simplejwt==5.2.2 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+djangorestframework==3.14.0 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+drf-spectacular==0.24.2 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+importlib-resources==5.10.1 ; python_full_version >= "3.8.10" and python_version < "3.9"
+inflection==0.5.1 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+jsonschema==4.17.3 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+pillow==9.3.0 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+pkgutil-resolve-name==1.3.10 ; python_full_version >= "3.8.10" and python_version < "3.9"
+pyjwt==2.6.0 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+pyrsistent==0.19.2 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+python-magic==0.4.27 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+pytz==2022.6 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+pyyaml==6.0 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+sqlparse==0.4.3 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+tzdata==2022.7 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0" and sys_platform == "win32"
+uritemplate==4.1.1 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+zipp==3.11.0 ; python_full_version >= "3.8.10" and python_version < "3.9"
