--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,13 @@ djangorestframework-simplejwt = "^5.2.2"
 python-magic = "^0.4.27"
 Pillow = "^9.3.0"
 drf-spectacular = "^0.24.2"
+django-environ = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.11.1"
+black = {version = "^22.12.0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
