--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
 attrs==22.1.0 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
 backports-zoneinfo==0.2.1 ; python_full_version >= "3.8.10" and python_version < "3.9"
+django-environ==0.9.0 ; python_full_version >= "3.8.10" and python_version < "4"
 django==4.1.4 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
 djangorestframework-simplejwt==5.2.2 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
 djangorestframework==3.14.0 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
@@ -8,6 +9,7 @@ drf-spectacular==0.24.2 ; python_full_version >= "3.8.10" and python_full_versio
 importlib-resources==5.10.1 ; python_full_version >= "3.8.10" and python_version < "3.9"
 inflection==0.5.1 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
 jsonschema==4.17.3 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
+mysqlclient==2.1.1 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
 pillow==9.3.0 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
 pkgutil-resolve-name==1.3.10 ; python_full_version >= "3.8.10" and python_version < "3.9"
 pyjwt==2.6.0 ; python_full_version >= "3.8.10" and python_full_version < "4.0.0"
